# RATaouille_c2

./: .gitignore  docker-compose.yml  dockerfile
backend/: dockerfile  main.py  requirements.txt
backend/lib/: socket_v1.py
client/: .rat_c2_client.db  client.py  client_id.json  run.sh
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: ClientCard.tsx  CommandModal.tsx  FileExplorerModal.tsx  ScreenshotModal.tsx  ShellModal.tsx  ThemeToggle.tsx
frontend/src/components/charts/: index.tsx
frontend/src/components/common/: ResourceBar.tsx  StatusBadge.tsx
frontend/src/components/dashboard/: ClientTable.tsx  ClientTableRow.tsx  ExpandedClientInfo.tsx  QuickActionsCard.tsx  ResourceUsageCard.tsx  SystemInfoCard.tsx
frontend/src/components/keylogger/: ActivityTimeline.tsx  ApplicationContext.tsx  ClientSelector.tsx  KeyboardHeatmap.tsx  KeystrokeLog.tsx
frontend/src/components/layout/: AppLayout.tsx  Header.tsx  Sidebar.tsx
frontend/src/config/: navigation.ts
frontend/src/contexts/: ClientsContext.tsx
frontend/src/hooks/: useClients.ts
frontend/src/lib/: utils.css
frontend/src/routes/: index.tsx
frontend/src/types/: client.ts  dirtree.ts  keylogger.ts
frontend/src/utils/: format.ts
rat_c2_server/: Cargo.toml  dockerfile  rats.db
rat_c2_server/src/: backend.rs  initdb.rs  lib.rs  main.rs  messages_back.rs  rat.rs
rat_c2_server/src/messages/: backend.rs  command.rs  common.rs  file.rs  heartbeat.rs  keylogger.rs  mod.rs  rat.rs
rat_c2_server/src_back/: main.rs
(+10 files in other folders)
