[package]
name = "rat_c2_server"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.214", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24.0"
tungstenite = "0.24.0"
futures = "0.3"
sqlite = "0.36.1"
serde_json = "1.0.132"
rand = "0.8.5"
base64 = "0.22.1"
aes = "0.8"
block-modes = "0.8"
cbc = "0.1.2"
hex = "0.4.3"
generic-array = "1.1.1"
